<?xml version="1.0"?>
<package format="3">
  <name>aim_and_fire</name>
  <version>0.0.1</version>
  <description>PTU aiming and firing node for ROS 2 Jazzy</description>

  <maintainer email="mhack@stud.hs-heilbronn.de">Marvin Hack</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
